--- a/code-notebook.ipynb
+++ b/code-notebook.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dana-Farber Data Scientist Coding Assessment\n",
+    "\n",
+    "### Overall Question: *Can you discover any mutations that are associated with treatment response?*\n",
+    "\n",
+    "For this set of data, the goal was to find a set of genes which were more prevalent in patients who were either responders or non-responders to an experimental treatment based on the supplied mutation annotation format (.maf) file. Both the .maf file and patient sample-info.tsv files were loaded in and merged together based on common columns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -357,6 +368,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subset for mutations that are nonsynonymous.\n",
+    "Any samples that had Variant Classification values of \"Silent\" were removed from the merged dataframe to create a dataframe consisting of only samples with nonsynymous mutations."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -582,6 +601,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find the 15 most common mutantions.\n",
+    "I found that this question could possibly be up for different interpretations. For the first count, I counted the number of times each mutation sample occurred within the dataframe, even though patients could have multiple protein changes involving the same gene."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -719,6 +746,13 @@
     "# Find the 15 most common mutant (MT) genes (regardless of multiple MT gene occurrence in same patient)\n",
     "top15_MTgenes = nonsynon_df[['Hugo_Symbol']].value_counts(dropna=False).to_frame('MT_Count').reset_index()\n",
     "top15_MTgenes.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the next version, I only counted for *unique* appearances of each mutant gene to eliminate multiple sample counts from the same patient. Results were similar to the original count."
    ]
   },
   {
@@ -860,6 +894,13 @@
     "top15_unique_genes = nonsynon_df.groupby(['Hugo_Symbol'])['Patient_ID'].nunique()\n",
     "top15_unique_genes = top15_unique_genes.to_frame('Unique_Count').sort_values(by=['Unique_Count'], ascending=False).reset_index()\n",
     "top15_unique_genes.head(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, I counted unique gene-protein_change mutations to find which specific SNPs showed up the most frequently. This involved having to account for the fact that some variants classified as \"splice sites\" had NaN values for protein_change. I chose to not drop these values when counting occurrences."
    ]
   },
   {
@@ -1058,8 +1099,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison of mutational burden and treatment response\n",
+    "As a way to examine a possible relationship between the mutational burden, defined as the set of values in the nonsynonymous_mutations_per_Mb column, and response status, I performed a t-test comparing the mean mutational burden values between responder and non-responder patients. This resulted in a significant difference between the two groups as responders had a lower mean mutation murden than non-responders (p-value=0.0001). \n",
+    "\n",
+    "Along with this, I also looked at the relationship at the number of mutant (MT) and wild-type (WT) genes per patient in each response group. Because not every patient contained a sample record for the nearly 7000 unique genes listed in the original .maf file, I went on the assumption that if a patient lacked a sample record for a given gene, then he or she was wild-type for that given gene. Separate t-tests showed a higher mean number of MT gene samples in responders than non-responders (p-value=0.0002) while non-responders had a higher mean number of WT samples than responders (p=0.0002)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1089,7 +1140,7 @@
     }
    ],
    "source": [
-    "# Run t-test to look at association of WT/MT on mutational burden (total num. of mutations/mutations per Mb)\n",
+    "# Run t-test to look at comparison between response and mutational burden (total num. of mutations/mutations per Mb)\n",
     "def responses_ttests():\n",
     "    \n",
     "    # setup DF of nonsynonymous mutations per Mb per patient\n",
@@ -1146,8 +1197,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perform a statistical test to explore if any mutated genes are enriched in patients who either responded or not.\n",
+    "In order to answer the overall question, we must first consider the type of data we are working with and how it can be utilized. I feel that there are two  patient categorical data we are comparing: gene sample type (mutation vs. wild-type) and response (responder vs. non-responder). Based on my previous assumptions of a gene being wild-type for a given patient if he or she does not have a sample record for it, it appears that we can count the number of patients who fit into each response-gene type pairing.\n",
+    "\n",
+    "This then leads me to believe that a Fisher's Exact Test may be a good fit for this data as our sample size is relatively small. We can create 2x2 contingency tables and then use SciPy to count and calculate the probabilities that the ratio of MT-responders is significantly different to the ratio of WT-responders for each gene. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1203,15 +1264,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The given results from Fisher's test showed significant differences (p<0.05) in ratios for the genes ERCC2, HERC1, MROH2B, HECTD1, AKAP9, MACF1, and KMT2C, indicating possible enrichment in responders."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6927/6927 [01:20<00:00, 85.98it/s]\n"
+      "100%|██████████| 6927/6927 [01:21<00:00, 84.71it/s]\n"
      ]
     },
     {
@@ -1266,9 +1334,9 @@
        "      <td>25</td>\n",
        "      <td>9</td>\n",
        "      <td>41</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>0.390244</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>0.609756</td>\n",
        "      <td>0.219512</td>\n",
        "      <td>True</td>\n",
@@ -1285,9 +1353,9 @@
        "      <td>25</td>\n",
        "      <td>6</td>\n",
        "      <td>44</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>0.431818</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>0.568182</td>\n",
        "      <td>0.136364</td>\n",
        "      <td>True</td>\n",
@@ -1304,9 +1372,9 @@
        "      <td>25</td>\n",
        "      <td>6</td>\n",
        "      <td>44</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>0.431818</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>0.568182</td>\n",
        "      <td>0.136364</td>\n",
        "      <td>True</td>\n",
@@ -1323,9 +1391,9 @@
        "      <td>25</td>\n",
        "      <td>6</td>\n",
        "      <td>44</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>0.431818</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>0.568182</td>\n",
        "      <td>0.136364</td>\n",
        "      <td>True</td>\n",
@@ -1342,12 +1410,107 @@
        "      <td>25</td>\n",
        "      <td>6</td>\n",
        "      <td>44</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>0.431818</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>0.568182</td>\n",
        "      <td>0.136364</td>\n",
        "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>MACF1</td>\n",
+       "      <td>0.022290</td>\n",
+       "      <td>1.651894</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>6</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.431818</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.568182</td>\n",
+       "      <td>0.136364</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>KMT2C</td>\n",
+       "      <td>0.048797</td>\n",
+       "      <td>1.311606</td>\n",
+       "      <td>9.333333</td>\n",
+       "      <td>7</td>\n",
+       "      <td>18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>8</td>\n",
+       "      <td>42</td>\n",
+       "      <td>0.875</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.571429</td>\n",
+       "      <td>0.190476</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ANK2</td>\n",
+       "      <td>0.050152</td>\n",
+       "      <td>1.299712</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>CHD5</td>\n",
+       "      <td>0.050152</td>\n",
+       "      <td>1.299712</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>COL6A6</td>\n",
+       "      <td>0.050152</td>\n",
+       "      <td>1.299712</td>\n",
+       "      <td>inf</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.444444</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.555556</td>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1360,23 +1523,38 @@
        "2  MROH2B  0.022290         1.651894         inf        6       19   \n",
        "3  HECTD1  0.022290         1.651894         inf        6       19   \n",
        "4   AKAP9  0.022290         1.651894         inf        6       19   \n",
+       "5   MACF1  0.022290         1.651894         inf        6       19   \n",
+       "6   KMT2C  0.048797         1.311606    9.333333        7       18   \n",
+       "7    ANK2  0.050152         1.299712         inf        5       20   \n",
+       "8    CHD5  0.050152         1.299712         inf        5       20   \n",
+       "9  COL6A6  0.050152         1.299712         inf        5       20   \n",
        "\n",
        "   MT_Non-Resp  WT_Non-Resp  Total_MT  Total_WT  MT_Resp_Freq  WT_Resp_Freq  \\\n",
-       "0            0           25         9        41           1.0      0.390244   \n",
-       "1            0           25         6        44           1.0      0.431818   \n",
-       "2            0           25         6        44           1.0      0.431818   \n",
-       "3            0           25         6        44           1.0      0.431818   \n",
-       "4            0           25         6        44           1.0      0.431818   \n",
+       "0            0           25         9        41         1.000      0.390244   \n",
+       "1            0           25         6        44         1.000      0.431818   \n",
+       "2            0           25         6        44         1.000      0.431818   \n",
+       "3            0           25         6        44         1.000      0.431818   \n",
+       "4            0           25         6        44         1.000      0.431818   \n",
+       "5            0           25         6        44         1.000      0.431818   \n",
+       "6            1           24         8        42         0.875      0.428571   \n",
+       "7            0           25         5        45         1.000      0.444444   \n",
+       "8            0           25         5        45         1.000      0.444444   \n",
+       "9            0           25         5        45         1.000      0.444444   \n",
        "\n",
        "   MT_Non_Freq  WT_Non_Freq  MT/WT_Ratio  Sig_Enrichment  \n",
-       "0          0.0     0.609756     0.219512            True  \n",
-       "1          0.0     0.568182     0.136364            True  \n",
-       "2          0.0     0.568182     0.136364            True  \n",
-       "3          0.0     0.568182     0.136364            True  \n",
-       "4          0.0     0.568182     0.136364            True  "
+       "0        0.000     0.609756     0.219512            True  \n",
+       "1        0.000     0.568182     0.136364            True  \n",
+       "2        0.000     0.568182     0.136364            True  \n",
+       "3        0.000     0.568182     0.136364            True  \n",
+       "4        0.000     0.568182     0.136364            True  \n",
+       "5        0.000     0.568182     0.136364            True  \n",
+       "6        0.125     0.571429     0.190476            True  \n",
+       "7        0.000     0.555556     0.111111           False  \n",
+       "8        0.000     0.555556     0.111111           False  \n",
+       "9        0.000     0.555556     0.111111           False  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,8 +1574,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create a scatterplot of the results from your test.\n",
+    "For this question, the acquired p-values were originally plotted against the number of patients who had mutations for each unique gene using Seaborn. However, this method was overall lackluster. In order to make a more interesting plot with interactive elements, the original results dataframe was melted down to create tidy rows with unique values which could be incorporated into the creation of the plot. This dataframe was then used as the basis for a separate scatterplot made using Plotly with a y-axis of -Log10(P-value), color markers to distinguish response type, and a horizontal line along -Log10(0.05) to give a visual marker of significance. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1592,7 @@
        "[Text(0.5, 1.0, \"Fisher's Exact Test\")]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1436,7 +1622,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6927/6927 [00:40<00:00, 171.21it/s]\n"
+      "100%|██████████| 6927/6927 [00:40<00:00, 170.35it/s]\n"
      ]
     },
     {
@@ -99487,8 +99673,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Further visualizations\n",
+    "Considering scatterplots showing p-values from Fisher's Exact Test are considered unusual in many publications, many authors instead choose to visualize differences between categorical ratios by using mosaic plots. These act as visual representations of the 2x2 contingency tables used when calculating Fisher's p-values. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99521,7 +99715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -99568,8 +99762,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparing number of WT vs. MT samples and number mutations per Mb\n",
+    "Looking at ERCC2, the most significantly affected gene between response and mutation type groups, there are 9 patients who fit into the MT-responder category with 25 patients falling into the WT-non-responder category and the remaining 16 categorized as WT-responders (see mosaic plot above). \n",
+    "\n",
+    "Similar to the earlier t-test comparing mutation burden and response, there appears to be a significant difference in the mean mutation burden based on the number of nonsynonymous mutations in Mb_count between MT patients and WT patients (p-value=0.0008). "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -99628,10 +99832,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Conclusions and Remarks\n",
+    "\n",
+    "This set of gene mutations features thousands of genes, only two of which (TTN, TP53) occur in at least half of the patient population. Responders to treatment appear to show a propensity to a higher number of mutations compared to non-responders. Based on a Fisher's Exact Test, seven gene samples appear to be enriched in mutant responders: ERCC2, HERC1, MROH2B, HECTD1, AKAP9, MACF1, and KMT2C. Comparing patients with wild-type vs. mutant version of the ERCC2 gene shows a significant difference between the groups with mutant patients having a higher mean mutation Mb count than wild-type patients.\n",
+    "\n",
+    "One way to expand this analysis would be to gain expression values for the individual genes to perform a more quantitative analysis of the genetic difference between each response group. For example, this would allow for plotting the log2(fold change) between response groups in order to create a volcano plot for visualizing the difference in gene expression levels. This data could also allow for a more in-depth analysis between responders and mutation status by opening up the possibility to gene set expression analysis (GSEA). Along with individual gene difference data, this could allow for analysis into changes in genetic pathways between response groups due to mutation status. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
