modified:   code-notebook.ipynb     final version for submission

--- a/code-notebook.ipynb
+++ b/code-notebook.ipynb
@@ -900,7 +900,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, I counted unique gene-protein_change mutations to find which specific SNPs showed up the most frequently. This involved having to account for the fact that some variants classified as \"splice sites\" had NaN values for protein_change. I chose to not drop these values when counting occurrences."
+    "Finally, I counted unique protein_change mutations to find which specific SNPs showed up the most frequently. This involved having to account for the fact that some variants classified as \"splice sites\" had NaN values for protein_change. I chose to not drop these values when counting occurrences."
    ]
   },
   {
@@ -1105,7 +1105,7 @@
     "### Comparison of mutational burden and treatment response\n",
     "As a way to examine a possible relationship between the mutational burden, defined as the set of values in the nonsynonymous_mutations_per_Mb column, and response status, I performed a t-test comparing the mean mutational burden values between responder and non-responder patients. This resulted in a significant difference between the two groups as responders had a lower mean mutation murden than non-responders (p-value=0.0001). \n",
     "\n",
-    "Along with this, I also looked at the relationship at the number of mutant (MT) and wild-type (WT) genes per patient in each response group. Because not every patient contained a sample record for the nearly 7000 unique genes listed in the original .maf file, I went on the assumption that if a patient lacked a sample record for a given gene, then he or she was wild-type for that given gene. Separate t-tests showed a higher mean number of MT gene samples in responders than non-responders (p-value=0.0002) while non-responders had a higher mean number of WT samples than responders (p=0.0002)."
+    "Along with this, I also looked at the relationship at the number of mutant (MT) and wild-type (WT) genes per patient in each response group. Because not every patient contained a sample record for the nearly 7000 unique genes listed in the original .maf file, I went on the assumption that if a patient lacked a sample record for a given gene, then he or she was wild-type for that given gene. A t-test showed a higher mean number of MT gene samples in responders than non-responders (p-value=0.0002). Another t-test showed that non-responders had a higher mean number of WT samples than responders (p=0.0002)."
    ]
   },
   {
@@ -1201,7 +1201,7 @@
    "metadata": {},
    "source": [
     "### Perform a statistical test to explore if any mutated genes are enriched in patients who either responded or not.\n",
-    "In order to answer the overall question, we must first consider the type of data we are working with and how it can be utilized. I feel that there are two  patient categorical data we are comparing: gene sample type (mutation vs. wild-type) and response (responder vs. non-responder). Based on my previous assumptions of a gene being wild-type for a given patient if he or she does not have a sample record for it, it appears that we can count the number of patients who fit into each response-gene type pairing.\n",
+    "In order to answer the overall question, we must first consider the type of data we are working with and how it can be utilized. I feel that there are two  categorical data we are comparing for each patient: gene sample type (mutation vs. wild-type) and response (responder vs. non-responder). Based on my previous assumptions of a gene being wild-type for a given patient if he or she does not have a sample record for it, it appears that we can count the number of patients who fit into each response-gene type pairing.\n",
     "\n",
     "This then leads me to believe that a Fisher's Exact Test may be a good fit for this data as our sample size is relatively small. We can create 2x2 contingency tables and then use SciPy to count and calculate the probabilities that the ratio of MT-responders is significantly different to the ratio of WT-responders for each gene. "
    ]
@@ -1279,7 +1279,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6927/6927 [01:21<00:00, 84.71it/s]\n"
+      "100%|██████████| 6927/6927 [01:21<00:00, 84.87it/s]\n"
      ]
     },
     {
@@ -1615,14 +1615,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6927/6927 [00:40<00:00, 170.35it/s]\n"
+      "100%|██████████| 6927/6927 [00:40<00:00, 169.52it/s]\n"
      ]
     },
     {
@@ -1732,7 +1732,7 @@
        "4      0.111659           False  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -99682,7 +99682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99715,7 +99715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -99773,7 +99773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -99837,15 +99837,10 @@
    "source": [
     "### Conclusions and Remarks\n",
     "\n",
-    "This set of gene mutations features thousands of genes, only two of which (TTN, TP53) occur in at least half of the patient population. Responders to treatment appear to show a propensity to a higher number of mutations compared to non-responders. Based on a Fisher's Exact Test, seven gene samples appear to be enriched in mutant responders: ERCC2, HERC1, MROH2B, HECTD1, AKAP9, MACF1, and KMT2C. Comparing patients with wild-type vs. mutant version of the ERCC2 gene shows a significant difference between the groups with mutant patients having a higher mean mutation Mb count than wild-type patients.\n",
+    "This set of gene mutations features thousands of genes, only two of which (TTN, TP53) have mutations which occur in at least half of the mutation samples. Responders to treatment appear to show a propensity to a higher number of mutations compared to non-responders. Based on a Fisher's Exact Test, seven gene samples appear to be enriched in mutant responders: ERCC2, HERC1, MROH2B, HECTD1, AKAP9, MACF1, and KMT2C. Comparing patients with wild-type vs. mutant version of the ERCC2 gene shows a significant difference between the groups with mutant patients having a higher mean mutation Mb count than wild-type patients.\n",
     "\n",
-    "One way to expand this analysis would be to gain expression values for the individual genes to perform a more quantitative analysis of the genetic difference between each response group. For example, this would allow for plotting the log2(fold change) between response groups in order to create a volcano plot for visualizing the difference in gene expression levels. This data could also allow for a more in-depth analysis between responders and mutation status by opening up the possibility to gene set expression analysis (GSEA). Along with individual gene difference data, this could allow for analysis into changes in genetic pathways between response groups due to mutation status. "
+    "One way to expand this analysis would be to gain expression values for the individual genes to perform a more quantitative analysis of the genetic difference between each response group. For example, this would allow for plotting the log2(fold change) between response groups in order to create a volcano plot for visualizing the difference in gene expression levels. This data could also allow for a more in-depth analysis between response and mutation status by opening up the possibility to gene set expression analysis (GSEA). Along with individual gene difference data, this could allow for analysis into changes in genetic pathways between response groups due to mutation status. "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
